# user-svc-dtos-rust

./: .gitignore  Cargo.toml  LICENSE  Readme.md
src/: lib.rs
src/domain/user/: credential_type.rs  mod.rs  token.rs  user.rs
src/dtos/: mod.rs
src/dtos/sample/: sample.rs
src/dtos/user/: user_dtos.rs
src/enums/: error.rs
