[package]
name = "dev-dtos"
version = "0.1.0"
edition = "2021"
authors = ["Franklin E. Blanco"]
description = "User svc dtos"
license = "MIT"
readme = "README.md"
repository = "https://github.com/franklinblanco/user-dtos.git"

[lib]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = [ "serde" ] }